Adds pdf scanning